[package]
name = "replace_text_app"
version = "1.0.0"
description = "Replace Text App"
authors = ["julio de Pieri"]
license = "MIT"
repository = "https://github.com/juliodepieri/replace-text"
edition = "2021"

[[bin]]
name = "replace_text_app"
src = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.40"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
